--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
                 <a href="contact.html" class="btn btn-outline">Get In Touch</a>
               </div>
               <div class="social-links" data-aos="fade-up" data-aos-delay="600">
-                <a href="#"><i class="bi bi-twitter"></i></a>
+                <a href="https://x.com/frost1748?t=lmFVLCRHxsAd98ddZ-qfsg&s=08"><i class="bi bi-twitter"></i></a>
                 <a href="#"><i class="bi bi-linkedin"></i></a>
-                <a href="#"><i class="bi bi-github"></i></a>
-                <a href="#"><i class="bi bi-dribbble"></i></a>
-                <a href="#"><i  class="bi bi-instagram"></i></a>
+                <a href="https://github.com/Karani105"><i class="bi bi-github"></i></a>
+                <!-- <a href="#"><i class="bi bi-dribbble"></i></a> -->
+                <a href="https://www.instagram.com/__.karani_?igsh=MXFhcXVtMDk4dHlxYQ=="><i  class="bi bi-instagram"></i></a>
               </div>
             </div>
           </div>
