--- a/portfolio.html
+++ b/portfolio.html
@@ -76,9 +76,9 @@
       </nav>
 
       <div class="header-social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://x.com/frost1748?t=lmFVLCRHxsAd98ddZ-qfsg&s=08" class="twitter"><i class="bi bi-twitter-x"></i></a>
+        <a href="https://github.com/Karani105" class="github"><i class="bi bi-github"></i></a>
+        <a href="https://www.instagram.com/__.karani_?igsh=MXFhcXVtMDk4dHlxYQ==" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
@@ -100,10 +100,10 @@
         <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="200">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-strategy">Strategy</li>
+            <!-- <li data-filter=".filter-strategy">Strategy</li>
             <li data-filter=".filter-finance">Finance</li>
             <li data-filter=".filter-operations">Operations</li>
-            <li data-filter=".filter-technology">Technology</li>
+            <li data-filter=".filter-technology">Technology</li> -->
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="300">
@@ -111,41 +111,41 @@
               <div class="portfolio-card">
                 <div class="portfolio-img">
                   <img src="assets/img/portfolio/PIZZA POSTA.jpg" alt="Portfolio Item" class="img-fluid">
-                  <div class="portfolio-overlay">
+                  <!-- <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/portfolio-1.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
-                    <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
-                  </div>
+                    <a href="" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div> -->
                 </div>
                 <div class="portfolio-info">
                   <h4>Graphic Design</h4>
                   <p>marketng poster</p>
-                  <div class="portfolio-tags">
+                  <!-- <div class="portfolio-tags">
                     <span>Strategy</span>
                     <span>Consulting</span>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
 
-            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-finance">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-finance">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/portfolio-2.webp" alt="Portfolio Item" class="img-fluid">
+                  <img src="assets/img/portfolio/surgery-1822458_1280.jpg" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
-                    <a href="assets/img/portfolio/portfolio-2.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
-                    <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                    <a href="assets/img/portfolio/surgery-1822458_1280.jpg" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="https://karani105.github.io/first-repository/" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
-                  <h4>Financial Restructuring</h4>
-                  <p>Financial Advisory</p>
+                  <h4>Web development</h4>
+                  <!-- <p>Financial Advisory</p>
                   <div class="portfolio-tags">
                     <span>Finance</span>
                     <span>Investment</span>
-                  </div>
+                  </div> -->
                 </div>
               </div>
-            </div> -->
+            </div>
 
             <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-operations">
               <div class="portfolio-card">
@@ -167,7 +167,7 @@
               </div>
             </div> -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-technology">
+            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-technology">
               <div class="portfolio-card">
                 <div class="portfolio-img">
                   <img src="assets/img/portfolio/portfolio-4.webp" alt="Portfolio Item" class="img-fluid">
@@ -184,10 +184,10 @@
                     <span>Innovation</span>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-strategy">
+            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-strategy">
               <div class="portfolio-card">
                 <div class="portfolio-img">
                   <img src="assets/img/portfolio/portfolio-5.webp" alt="Portfolio Item" class="img-fluid">
@@ -204,10 +204,10 @@
                     <span>Growth</span>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-finance">
+            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-finance">
               <div class="portfolio-card">
                 <div class="portfolio-img">
                   <img src="assets/img/portfolio/portfolio-6.webp" alt="Portfolio Item" class="img-fluid">
@@ -224,8 +224,8 @@
                     <span>Investment</span>
                   </div>
                 </div>
-              </div>
-            </div>
+              </div> -->
+            <!-- </div> -->
           </div><!-- End Portfolio Items Container -->
 
         </div>
@@ -244,21 +244,21 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">FolioOne</strong> <span>All Rights Reserved<br></span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">Francis Karani</strong> <span>All Rights Reserved<br></span></p>
       </div>
-      <div class="social-links d-flex justify-content-center">
+      <!-- <div class="social-links d-flex justify-content-center">
         <a href=""><i class="bi bi-twitter-x"></i></a>
         <a href=""><i class="bi bi-facebook"></i></a>
         <a href=""><i class="bi bi-instagram"></i></a>
         <a href=""><i class="bi bi-linkedin"></i></a>
-      </div>
-      <div class="credits">
+      </div> -->
+      <!-- <div class="credits"> -->
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
+        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+      </div> -->
     </div>
 
   </footer>
